# tui-roleplay-agent

./: .gitignore  AGENTS.md  Cargo.toml  README.md
config/: example.toml
crates/agent/: Cargo.toml
crates/agent/src/: basic_tools.rs  chain.rs  graph.rs  lib.rs  tool_registry.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  message.rs  traits.rs  types.rs
crates/llm/: Cargo.toml
crates/llm/src/: client.rs  lib.rs  logging.rs  types.rs
crates/memory/: Cargo.toml
crates/memory/src/: conversation.rs  lib.rs  persistence.rs  sliding_window.rs  store.rs
crates/roleplay/: Cargo.toml
crates/roleplay/src/: character_agent.rs  director.rs  lib.rs  scene_manager.rs  turn_manager.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  command.rs  event.rs  lib.rs  ui.rs
docs/: bugfix-chat-scroll-overflow.md  bugfix-chat-text-wrapping.md  bugfix-chinese-input-panic.md  learning-plan.md
src/: main.rs
