[workspace]
members = [
    "crates/core",
    "crates/llm",
    "crates/memory",
    "crates/agent",
    "crates/roleplay",
    "crates/tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUIDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Unicode
unicode-width = "0.2"

# Internal crates
rust-agent-core = { path = "crates/core" }
rust-agent-llm = { path = "crates/llm" }
rust-agent-memory = { path = "crates/memory" }
rust-agent-agent = { path = "crates/agent" }
rust-agent-roleplay = { path = "crates/roleplay" }
rust-agent-tui = { path = "crates/tui" }

[package]
name = "rust-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rust-agent"
path = "src/main.rs"

[dependencies]
rust-agent-core = { workspace = true }
rust-agent-llm = { workspace = true }
rust-agent-memory = { workspace = true }
rust-agent-agent = { workspace = true }
rust-agent-roleplay = { workspace = true }
rust-agent-tui = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
