[package]
name = "rust-agent-memory"
version.workspace = true
edition.workspace = true

[dependencies]
rust-agent-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.40.1", features = ["bundled"] }
