[package]
name = "rust-agent-tui"
version.workspace = true
edition.workspace = true

[dependencies]
rust-agent-core = { workspace = true }
rust-agent-llm = { workspace = true }
rust-agent-memory = { workspace = true }
rust-agent-roleplay = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio-stream = { workspace = true }
unicode-width = { workspace = true }
